fix: wrong package names